# TradSC

./: .gitignore  .prettierignore  .prettierrc  .release-notes-v4.1.3.md  .release-notes-v4.1.4.md  .release-notes-v4.1.5.md  .release-notes-v4.1.6.md  .release-notes-v4.2.7.md  AUDIT_SECURITE_2.0.8.md  BUILD-GUIDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  Makefile  PATCHNOTES_3.0.2.md  PATCHNOTES_3.0.3.md  PATCHNOTES_3.0.4.md  PATCHNOTES_3.0.5.md  PATCHNOTES_3.0.6.md  PATCHNOTES_3.0.7.md  PATCHNOTES_3.0.8.md  PATCHNOTES_3.0.9.md  PATCHNOTES_3.1.0.md  PATCHNOTES_3.1.1.md  PATCHNOTES_3.1.2.md  PATCHNOTES_3.1.4.md  PATCHNOTES_3.1.8.md  PLAN_OVERLAY.md  PRIVACY.md  README.md  README_EN.md  README_FR.md  SECURITY.md  TradSC_Updater.ps1  TradSC_Updater.ps1.ps1  TradSCinstallerauto.bat  VERSIONING.md  build-tauri.ps1  checksums.txt  checksums_2.1.3.txt  (+18 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: NextJS.yml  discord-release.yml  release.yml
UsersdjameDocumentsprojetTradSC-maintemp-check/: latest.json
cargo-overlay-sidecar/: Cargo.toml  build.rs
cargo-overlay-sidecar/src/: main.rs
cargo-overlay-sidecar/ui/: cargo-overlay.slint
scmdb-lang/: lang-fr-4.8.0-live.11825000.json  scmdb-translations-fr.json
scripts/: README.md  analyze-scmdb-untranslated.mjs  build-all-with-checksums.ps1  build-release.ps1  build-scmdb-lang.mjs  build-store.ps1  check-version.js  fake-blueprint.ps1  merge-scmdb-translations.mjs  update-from-upstream.ps1  update-version.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.microsoftstore.conf.json  tauri.portable.conf.json
src-tauri/capabilities/: default.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/resources/companion/: app.css  companion.js  dashboard.html  infos.html  outils.html  sw.js  traduction.html
src-tauri/src/: lib.rs  main.rs
src-tauri/src/events/: mod.rs  window_controls.rs
src-tauri/src/scripts/: app_stats.rs  background_service.rs  ban_system.rs  bindings_functions.rs  blueprints.rs  cache_functions.rs  cargo_overlay.rs  carnet_manual.rs  character_backup.rs  citizen_profile_cache.rs  citizen_tags.rs  cloud_backup.rs  commodity_names.json  commodity_names_en.json  companion_server.rs  config_paths.rs  discord_presence.rs  gamelog_blueprint_watcher.rs  gamelog_history_parser.rs  gamepath.rs  graphics_settings.rs  joystick_input.rs  local_characters_functions.rs  migration_v426.rs  mission_classifier.rs  mod.rs  oauth_callback.rs  offline_cache.rs  onboarding.rs  overlay.rs  partners.rs  patchnote.rs  pathfinder.rs  presets_list_functions.rs  ship_catalog_cache.rs  startup_manager.rs  system_tray.rs  theme_preferences.rs  third_party_apps.rs  translation_functions.rs  (+6 more)
src/app/: globals.css  layout.tsx  page.tsx
src/app/bindings/: actions.tsx  columns.tsx  data-table.tsx  page.tsx
src/app/clear_cache/: actions.tsx  columns.tsx  data-table.tsx  page.tsx
src/app/patchnotes/: page.tsx
src/app/splash/: page.tsx
src/app/traduction/: page.tsx
src/assets/lotties/: splash.json
src/components/: CargoBuyPopup.tsx  RssFeed.tsx
src/components/blueprints/: AutoDetectCard.tsx
src/components/custom/: AdminElevateButton.tsx  BanGate.tsx  ColorPicker.tsx  CommitList.tsx  CompanionCard.tsx  ControlMenu.tsx  CustomMenu.tsx  DarkModeSelector.tsx  DiscordIcon.tsx  DotEffect.tsx  DraggableRegion.tsx  ErrorBoundary.tsx  MigrationGate.tsx  PvpFloatingTimer.tsx  SecurityWarning.tsx  Sidebar.tsx  SplashScreen.tsx  UpdateDialog.tsx  UpdateModal.tsx  announcement-dialog.tsx  app-sidebar.tsx  auth-dialog.tsx  background-video.tsx  cache-cleanup-prompt.tsx  carnet-drawer.tsx  carnet-home-button.tsx  character-card.tsx  cloud-backup-content.tsx  color-picker.tsx  commit-list.tsx  control-menu.tsx  custom-link-dialog.tsx  darkmode-selector.tsx  drag-region.tsx  holiday-wishes-dialog.tsx  home-status-card.tsx  layout.tsx  mini-player.tsx  org-pill.tsx  overlay-action-bar.tsx  (+9 more)
src/components/magicui/: border-beam.tsx  lens.tsx  magic-card.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  popover.tsx  select.tsx  sidebar.tsx  skeleton.tsx  slider.tsx  table.tsx  tabs.tsx  (+3 more)
src/data/: sc-tools.ts
src/events/: mod.rs  window_controls.rs
src/hooks/: use-toast.ts  useAvatar.ts  useCargoBuyDetection.ts  useCargoBuyOverlayLauncher.ts  useCarnetManual.ts  useCompanionBridge.ts  useEncounteredPlayers.ts  useGlobalBlueprintToast.ts  useLogbookStats.ts  useShaderCacheAutoClean.ts  useTranslationStatus.ts  useUpdater.ts
src/lib/: carnet-manual.ts  logbook-types.ts  supabase.ts
src/pages/: Actualites.tsx  Bindings.tsx  Blueprints.tsx  Cargo.tsx  CharactersPresetsList.tsx  ClearCache.tsx  DpsCalculator.tsx  Finder.tsx  GraphicsSettings.tsx  Home.tsx  LocalCharactersPresets.tsx  Logbook.tsx  OverlayCargoBuy.tsx  OverlayControl.tsx  OverlayHub.tsx  OverlayHubPresetPicker.tsx  OverlayView.tsx  OverlayWebviewBar.tsx  Partenaires.tsx  PatchNotes.tsx  PreviewOverlayBars.tsx  Pvp.tsx  Regolith.tsx  ScExternalTool.tsx  ScmDb.tsx  ShipMaps.tsx  Traduction.tsx  UpdatesPage.tsx  VerseGuide.tsx
src/services/: updateService.ts
src/stores/: admin-store.ts  carnet-drawer-store.ts  custom-links-store.ts  preferences-sync-store.ts  sidebar-store.ts  stats-store.ts  theme-store.ts  themeStore.ts
src/types/: Translation.ts  charactersList.ts  commit.ts  overlay-hub.ts  theme-types.ts  translation.ts
src/utils/: CustomThemeProvider.ts  appInfos.json  buildInfo.ts  custom-theme-provider.ts  external.ts  fs-permissions.ts  hexToHsl.ts  invoke-helpers.ts  logger.ts  migration.ts  overlay-geometry-store.ts  overlay-hub-registry.ts  tauri-helpers.ts  version.ts  window-animate.ts
updater/: .gitignore  package-lock.json  package.json
updater/src/: index.html
updater/src-tauri/: Cargo.toml  tauri.conf.json
updater/src-tauri/capabilities/: default.json
updater/src-tauri/icons/: icon.icns
updater/src-tauri/src/: lib.rs  main.rs
~/.tauri/: key.key  key.key.pub
(+23 files in other folders)
