[package]
name = "cargo-overlay-sidecar"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "StarTrad — overlay cargo natif (Slint), sidecar focus-safe lancé par l'app Tauri"

[[bin]]
name = "startrad-cargo-overlay"
path = "src/main.rs"

[dependencies]
# Slint léger : winit + femtovg (GL). Pas de wgpu (pas besoin de vidéo ici).
slint = { version = "1.16", default-features = false, features = [
    "std",
    "compat-1-2",
    "backend-winit",
    "renderer-femtovg",
] }
# Backend winit explicite pour configurer with_active(false) (fenêtre
# non-activante = ne vole pas le focus du jeu).
i-slint-backend-winit = { version = "1.16", features = ["renderer-femtovg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }

[build-dependencies]
slint-build = "1.16"

# Embarque l'icône StarTrad dans le .exe (resource Windows) → pas de carré blanc.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
