[package]
name = "multitool"
version = "1.0.9"
description = "StarCitizen tool box"
authors = ["Onivoid"]
license = ""
repository = ""
default-run = "multitool"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
regex = "1"
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [ "fs-copy-file", "fs-read-dir", "fs-exists", "dialog-all", "fs-read-file", "fs-write-file", "path-all", "updater", "shell-open", "window-start-dragging", "window-close", "window-unminimize", "window-show", "window-hide", "window-maximize", "window-minimize", "window-unmaximize"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
