[package]
name = "startradfr"
version = "3.1.3"
description = "StarTrad FR - Traduction française pour Star Citizen"
authors = ["Drrakendu78"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "startradfr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
regex = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2.3"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
chrono = "0.4"
window-vibrancy = "0.6.0"
tokio = { version = "1.40.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
urlencoding = "2.1.3"
tauri-plugin-dialog = "2.3"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
is_elevated = "0.1"
dirs = "6.0.0"
zip = "0.6"
walkdir = "2"
discord-rich-presence = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
auto-launch = "0.5.0"
winreg = "0.55"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.9"
